--- a/index.html
+++ b/index.html
@@ -4,23 +4,45 @@
   <head>
       <meta<br>charset="utf-8">
       <title>Starter Template für Bootsrap</title>
-      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
-      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/style.css">
+      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css" media="screen">
+      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/style.css" media="screen">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
 
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top" id="header">
-      <div class="container">
-        ...
+  <nav class="navbar navbar-default navbar-fixed-top" id="header">
+      <div class="container-fluid">
+        <div class="row flex-items-xs-between">
+
+          <div class="col-xs-1 text-center">
+            <div class="container">
+              <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            </div>
+          </div>
+
+
+        <div class="col-xs-2">
+          <div class="container">
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+          </div>
+        </div>
+        <div class="col-xs-3 pull-right text-right">
+        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+        </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-
-   
 <section class="content">
   hallo hallo
+
 </section>
 <section class="navbar navbar-default navbar-fixed-bottom" id="footer">
   <div class="container-fluid text-center">
