--- a/index.html
+++ b/index.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
       <meta<br>charset="utf-8">
-      <title>Starter Template für Bootsrap</title>
-      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css" media="screen">
-      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/style.css" media="screen">
+      <title>TEST</title>
+      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/style.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
-
   <body>
-
-  <nav class="navbar navbar-default navbar-fixed-top" id="header">
-      <div class="container-fluid">
-        <div class="row flex-items-xs-between">
-
-          <div class="col-xs-1 text-center">
-            <div class="container">
-              <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-            </div>
-          </div>
-
-
-        <div class="col-xs-2">
-          <div class="container">
+  <nav class="navbar navbar-fixed-top" id="header">
+    <section class="container-fluid">
+      <div class="row flex-items-xs-between">
+        <div class="col-xs-3">
             <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
             <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
             <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-          </div>
+        </div>
+        <div class="col-xs-6 text-center">
+          <img src="img/platzhaltercheck.png" alt="platzhalterCheck" class="img-circle" id="menubutton">
         </div>
         <div class="col-xs-3 pull-right text-right">
-        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-        <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <div class="split"></div>
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
         </div>
       </div>
-    </div>
+    </section>
   </nav>
-
 <section class="content">
   hallo hallo
-
 </section>
 <section class="navbar navbar-default navbar-fixed-bottom" id="footer">
   <div class="container-fluid text-center">
