index.html und style.css, diverses task 1.2 - hkrause,mwünschel,ylehmann

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
       <meta<br>charset="utf-8">
-      <title>lelelelelele</title>
+      <title>CHECK!</title>
       <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/style.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -12,15 +12,26 @@
     <section class="container-fluid">
       <div class="row flex-items-xs-between">
         <div class="col-xs-3">
-            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
-            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/educationalPlan-inactive.png" alt="educationPlan" class="img-circle" id="menubutton">
+            <img src="img/achievedCompetences-inactive.png" alt="achievedCompetences" class="img-circle" id="menubutton">
+
+            <div class="btn-group">
+              <button type="button" class="btn btn-default dropdown-toggle" id="menubutton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               <img src="img/chapterOverview-inactive.png" alt="chapterOverview" id="menubutton"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li>Kompetenzen</li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Kompetenz1</a></li>
+                <li><a href="#">Kompetenz2</a></li>
+              </ul>
+            </div>
         </div>
         <div class="col-xs-6 text-center">
-          <img src="img/platzhaltercheck.png" alt="platzhalterCheck" class="img-circle" id="menubutton">
+          <img src="img/logo.png" alt="Logo">
         </div>
         <div class="col-xs-3 pull-right text-right">
-            <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
+            <img src="img/student/superhero-luke-active.png" alt="avatar" class="img-circle" id="menubutton">
             <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
             <img src="img/platzhalterbutton.png" alt="platzhalter" class="img-circle" id="menubutton">
             <div class="split"></div>
